# CMIP-GHG-Concentration-Generation

./: .codecov.yml  .env.sample  .gitignore  .pre-commit-config.yaml  20240524-config.yaml  20240729-config.yaml  CHANGELOG.md  LICENCES_SOURCES.md  LICENSE  Makefile  README.md  TODO.md  ci-config.yaml  ci-nightly-config.yaml  config-dev.yaml  dependencies-by-gas.json  dependencies-table.csv  dependencies-table.md  dev-config.yaml  dodo.py  pyproject.toml  v0.3.0-config.yaml  v0.4.0-config.yaml  v0.5.0-config.yaml  v1.0.0-config.yaml  zenodo.json
.github/: pull_request_template.md
.github/workflows/: ci.yaml  nightly.yaml
changelog/: 57.breaking.md  64.breaking.md  65.feature.md  65.improvement.md  65.trivial.md  66.trivial.md  67.trivial.md  68.fix.md  7.feature.md  7.trivial.md  70.breaking.md  70.feature.md  70.trivial.md  71.improvement.md  74.improvement.md  75.fix.md  76.improvement.md  77.improvement.md  78.feature.md  78.improvement.md  79.fix.md  81.feature.md  83.fix.md  84.feature.md  85.improvement.md  86.improvement.md  86.trivial.md  87.improvement.md  88.improvement.md  89.improvement.md  90.breaking.md  90.fix.md  90.improvement.md  90.trivial.md  91.fix.md  92.fix.md  92.improvement.md  93.feature.md  95.trivial.md  README.md
notebooks/: scratch.py
notebooks-archive/00yy_retrieve-data/: 0001_law-dome.py
notebooks-archive/01yy_process-data/: 0101_process-law-dome.py  0111_process-gggrn-global-mean.py
notebooks-archive/08yy_gridded-data-processing/: 0810_create-annual-global-mean.py
notebooks/000y_retrieve-misc-data/: 0001_natural-earth-shape-files.py  0002_primap.py  0003_hadCRUT5.py
notebooks/001y_process-noaa-data/: 0010_download.py  0011_extract.py  0012_process.py  0012_process_surface-flask.py  0013_process_in-situ.py  0014_process_hats.py  0019_noaa-network-overview.py
notebooks/002y_process-agage-data/: 0020_download-agage.py  0021_download-gage.py  0022_download-ale.py  0023_extract-agage.py  0024_extract-gage.py  0025_extract-ale.py  0029_agage-network-overview.py
notebooks/003y_process-law-dome-data/: 0020_process.py  0030_download-law-dome.py  0030_overview.py  0031_process-law-dome.py  0039_plot-overview-law-dome.py  scratch-law-dome-smoothing.py
notebooks/004y_process-scripps-data/: 0040_download-scripps.py  0041_process-scripps.py  0049_plot-overview-scripps.py
notebooks/005y_process-epica-data/: 0049_plot-overview-scripps.py  0050_download-epica.py  0051_process-epica.py  0059_plot-overview-scripps.py
notebooks/006y_process-neem-data/: 0060_download-neem.py  0061_process-neem.py  0069_plot-overview-neem.py
notebooks/007y_process-wmo-2022-ozone-assessment-ch7-data/: 0071_process-wmo-2022-ozone-assessment-ch7-data.py
notebooks/008y_process-western-et-al-2024-data/: 0081_download-western-et-al-2024-data.py  0082_process-western-et-al-2024-data.py
notebooks/009y_process-velders-et-al-2022-data/: 0091_download-velders-et-al-2022-data.py  0092_process-velders-et-al-2022-data.py
notebooks/00yy_retrieve-data/: 0001_law-dome.py  0010_gggrn.py  0010_noaa-network.py  0011_gggrn.py
notebooks/010y_compile-historical-emissions/: 0109_compile-complete-dataset.py
notebooks/010y_station-data-latitudinal-means/: 001y_scratch-binning.py
notebooks/011y_process-droste-et-al-2020-data/: 0111_download-droste-et-al-2020-data.py  0112_process-droste-et-al-2020-data.py
notebooks/012y_process-adam-et-al-2024-data/: 0121_process-adam-et-al-2024-data.py
notebooks/013y_process-ghosh-et-al-2023-data/: 0131_process-ghosh-et-al-2023-data.py
notebooks/014y_process-menking-et-al-2025-data/: 0141_process-menking-et-al-2025-data.py
notebooks/015y_process-scripps-co2-data/: 0151_download-scripps-co2-data.py  0152_process-scripps-co2-data.py
notebooks/015y_process-trudinger-et-al-2016-data/: 0151_download-trudinger-et-al-2016-data.py  0152_process-trudinger-et-al-2016-data.py
notebooks/01yy_process-data/: 0101_process-law-dome.py  0110_process-noaa.py  0111_process-gggrn-global-mean.py
notebooks/01yyy_process-data/: 0101_process-law-dome.py  0111_process-gggrn-global-mean.py
notebooks/030y_smooth-law-dome-data/: 0301_smooth-law-dome-data.py
notebooks/031y_smooth-ghosh-et-al-2023-data/: 0301_smooth-ghosh-et-al-2023-data.py  0311_smooth-ghosh-et-al-2023-data.py
notebooks/07yy_grid/: 0710_create-gridded-data.py
notebooks/08yy_gridded-data-processing/: 0810_create-annual-global-mean.py  0820_downscale-to-fine-grid.py
notebooks/09yy_write-input4mips-files/: 0910_write-input4mips-files.py
notebooks/0aaa_quick-crunch/: yyyy_quick-crunch-global-mean.py
notebooks/0xx_preparation/: 000_write-seed.py
notebooks/0yyy_retrieve-data/: 0001_law-dome.py
notebooks/10yy_n2o-monthly-15-degree/: 001y_scratch-binning.py  1000_n2o_bin-observational-network.py  1001_n2o_interpolate-observational-network.py  1002_n2o_global-mean-latitudinal-gradient-seasonality.py  1003_n2o_extend-pcs.py  1004_n2o_extend-global-annual-mean.py  1005_n2o_create-pieces-for-gridding.py
notebooks/11yy_ch4-monthly-15-degree/: 0001_scratch-other-grids.py  1100_ch4_bin-observational-network.py  1101_ch4_interpolate-observational-network.py  1102_ch4_global-mean-latitudinal-gradient-seasonality.py  1103_ch4_extend-pcs.py  1103_ch4_regress-and-extend-latitudinal-gradient.py  1104_ch4_extend-global-annual-mean.py  1104_ch4_extend-seasonality.py  1105_ch4_create-pieces-for-gridding.py  1105_ch4_extend-seasonality.py  1106_ch4_create-monthly-15-degree-grid.py  7104_ch4_extend-global-annual-mean.py  8104_ch4_extend-global-annual-mean.py  (+1 more)
notebooks/30yy_grid/: 3001_crunch-grids.py
scripts/: create-dev-ci-config-absolute.py  create-dev-config-absolute.py  doit-list-all.sh  find-all-agage-gases.py  make-dependency-table.py  make-graph-for-task.sh  mypy-bug-maybe.py  mypy-sandbox.py  run-for-single-gas-tmp.sh  run-helper.sh  update-dev-config.py  upload-bundle-to-zenodo.py  upload-to-ftp-server.py  upload-to-llnl.sh  upload-version-to-llnl.sh  write-config.py  write-run-config.py
stubs/: cftime.pyi  geopandas.pyi  jupytext.pyi  papermill.pyi  pooch.pyi
tests/: conftest.py
(+297 files in other folders)
